# popcorn

./: .env.development  .gitignore  LICENSE  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  schema.yml
front/: urls.py
front/static/front/: main.css
front/templates/: base.html
front/templates/front/: footer.html  header.html  home.html  login.html  signin.html  users.html
front/views/: __init__.py  follow_view.py  home_view.py  login_view.py  logout_view.py  signin_view.py  users_view.py
infraestructure/docker/: compose.yaml
popcorn_api/: admin.py  apps.py  urls.py
popcorn_api/migrations/: 0001_initial.py  0002_alter_seguidor_usuario.py  0003_alter_seguidor_usuario_and_more.py
popcorn_api/models/: __init__.py  curtida_model.py  filme_model.py  post_comentario_model.py  post_curtida_model.py  post_model.py  post_seguidor_model.py  usuario_model.py
popcorn_api/serializers/: __init__.py  feed_serializer.py  post_serializer.py  seguidor_serializer.py  user_serializer.py
popcorn_api/tests/: __init__.py  login_test.py
popcorn_api/tests/integration/v1/login/: post_test.py
popcorn_api/viewsets/: __init__.py  auth_viewset.py  post_viewset.py  seguidor_viewset.py  user_viewset.py
popcorn_app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
popcorn_auth/: apps.py  authentication.py
popcorn_auth/serializers/: token_serializer.py
popcorn_auth/viewsets/: __init__.py  toke_viewset.py
